nixiesubs.com update #2

--- a/_posts/2015-06-24-recruit.md
+++ b/_posts/2015-06-24-recruit.md
@@ -1,25 +1,36 @@
 ---
 author: kilo
-title: 招募启事
+title: 招募启事 - 视频字幕翻译
 permalink: /c-recruit
 ---
 
-辉光字幕组提供有偿视频字幕翻译服务，接受中-英语言对委托，在此招募各路有志之士加入我们。  
+辉光字幕组提供有偿视频字幕翻译服务，在此招募各路有志之士加入我们。  
 我们的主要客户为莱纳斯传媒集团（Linus Media Group），加拿大Youtube科技媒体，同时也是Youtube最大的视频博主之一。
 
-## 工资待遇
+## 职位和工资
 
-翻译工资每分钟 USD$3.70, 不需要打轴。  
-工资月结，没有最低限制。
+### 翻译
 
-入组后积累足够经验且质量上佳者可晋升校对。校对工作另计工作量和工资。
+- 工作内容：将原稿整理检查、纠正错误、布置格式后完成翻译任务；为必要处添加注释；为画面上文字标注并翻译。
+- 工资：以分钟单价计，工作量精确秒，没有最低限制，月结。工资标准较市场平均水平为高。
+
+### 校对
+
+- 不直接招募。翻译入组后，积累足够经验且质量上佳者可晋升校对。
+- 工作内容：检查、更正、修改、优化翻译稿，保证原文和译文的文本准确、翻译正确、文字流畅、语句通顺；负责评价审核翻译申请稿。
+- 校对工作另计工作量和工资。
+
+### 时轴
+
+- 目前组内不需要时轴。申请者如有能力打轴也可在必要时接到组内的打轴任务，工作量和工资单独计算。
 
 ## 应征者要求
 
-- 对翻译工作有兴趣，有足够英语理解能力和中文写作水平，了解机器翻译的能力极限和普遍水平。
+- 对翻译工作有兴趣，有足够英语理解能力和中文写作水平。
+- 了解机器翻译的能力极限和普遍水平，在使用机器翻译时有能力承担足够校对责任，保证最终提交的成品稿件没有机器翻译的错误和问题，特别是目标语言为中文时的中文欧化等问题。
 - 经常观看英文视频（包括各视频平台无字幕英文原声视频和英文原声影视剧等），尤其是Linus Media Group旗下各频道视频（LinusTechTips、TechQuickie、ShortCircuit、Mac Address等）。
 - 了解中英科技术语，能理解深度技术测评与剖析，对不理解、不了解的领域和术语等有通过网络搜索即可迅速理解并简要解释的能力。
-- 下笔严谨、耳朵灵敏、喜欢挑错，能听写含糊的口语，重叠混杂的对话等。少犯、不犯语法和拼写错误，对专有名词和术语等关键点有敏锐感知。
+- 下笔严谨、耳朵灵敏、喜欢挑错，能听写含糊的口语，重叠混杂的对话等。少犯、不犯语法和拼写错误，对专有名词和术语等关键点有敏锐感知。能快速理解并正确听写不同口音者为优，但不做强制要求。
 - 中文流畅、清晰、简洁，行文符合中文用语习惯。能在保证传达原意的情况下灵活运用不同句式，变换合理语序，尤其是对副词和语句逻辑关系的处理。
 - 对科技数码产品有折腾经验，包括但不限于：PC、准系统、游戏本、服务器、网络设备、NAS；水冷系统、计算机配件；相机、手机、电视、显示器、音频设备。
 - 有金工、木工、3D打印等手工经验，了解相关领域中英术语。
@@ -29,26 +40,27 @@ permalink: /c-recruit
 
 本组通过试译的方式选拔申请者。  
 请听写下附视频中的英文并用简体中文翻译。
-[NixieSubs_Test_Apple_Watch_seg.mp4](https://pan.baidu.com/s/1hrXPso8)
+
+[测试视频：NixieSubs_Test_Apple_Watch_seg.mp4](https://pan.baidu.com/s/1hrXPso8)
 
 随稿件请附带申请人的详细介绍，包括：
 
 - 与招募要求相符、相关的经验及背景
-- 列举平日主要摄取，自认为对工作有益的中英文媒体（视频、文章、博客等，形式不限）
+- 列举平日主要摄取，自觉对工作有益的中英文媒体（视频、文章、博客等，形式不限）
 - 其他申请人认为自己有助于工作的特长和属性
 
 完成后请将个人介绍与双语字幕稿直接贴入**邮件正文**，发送到`lttchina@linusmediagroup.com`。
 
 ### 要求与提示
-
-- __请不要将稿件通过邮件附件发送，否则有可能被拦截丢失。__
+{% assign fmt = site.posts | where: "title", "翻译格式、提醒与建议" | first %}
+{% assign survey = site.posts| where: "title", "辉光算卦" | first %}
+- **请不要将稿件通过邮件附件发送，否则有可能被拦截丢失。**
 - 提交的翻译稿请按照此页展示的格式编排。  
-  [placeholder]()  
+  [翻译格式、提醒与建议]({{ fmt.url }})  
   格式与断句良好的稿件更容易通过。
 - 稿件无需以带时间戳的字幕文件提交(`.ass`，`.srt`等)，但如果愿意可以将字幕文件以纯文本形式贴在邮件正文发送。
 - 充足的经验与背景介绍有助于提高录用几率。  
-  相关经验的内容可参考本页内容：  
-  [placeholder]()
+  相关经验的内容可参考本页内容：[辉光算卦]({{ survey.url }})
 
 ## 后续回复
 
