Hopefully one last update for nixiesubs.com

--- a/_posts/2017-11-13-survey.md
+++ b/_posts/2017-11-13-survey.md
@@ -54,7 +54,7 @@ title: 辉光算卦
     - 核心参数
       - 基础频率、、加速频率、过热降频
       - 计算单元（CU）/流处理器（SM）
-      - 处理单元：光追核心（RT Core）、神经处理单元/张量核心（Tensor Core）
+      - 其他加速单元：光追核心（RT Core）、神经处理单元/张量核心（Tensor Core）
       - 媒体编解码单元：Nvidia NVDEC/NVENC、AMD AMF、Intel QuickSync
       - 性能指标：浮点运算速度（FLOPS）
     - 显存参数：频率、位宽、大小、带宽
@@ -114,14 +114,14 @@ title: 辉光算卦
     - 了解不同面板的技术实现和性能表现：
       - LCD：IPS、TN、VA、TFT
       - LED：miniLED、microLED
-      - OLED：LTPO/LTPS、AMOLED、WOLED、QD-OLED、叠层（Tandem）OLED
+      - OLED：LTPO/LTPS、AMOLED、WOLED、QD-OLED、串联（Tandem）OLED
     - 了解不同面板增强技术：微透镜阵列、量子点（QD）膜
     - 了解不同面板背光：
       - 照射方式：侧入式、直下式
       - 光源类型：白光、蓝光LED/OLED
-    - 了解部分特殊技术带来的面板观感瑕疵：QD-OLED紫屏和彩边、AMOLED特殊子像素布局带来的显示问题、WOLED高亮度下的饱和度稀释问题
+    - 了解部分特殊技术带来的面板观感瑕疵：QD-OLED紫屏和彩边、AMOLED特殊子像素布局、WOLED高亮度饱和度稀释
   - 了解FreeSync和G-Sync设计理念和实现方式的不同
-  - 了解自发光面板亮度调制的不同方式和各自缺陷：DC和PWM
+  - 了解自发光面板亮度调制的不同方式和各自缺陷：DC、PWM
   - 在面板/显示器行业工作
   - 修理过显示器丨更换过笔记本屏幕
   - 了解显示器各组件功能丨曾自己挑选主控和面板自制显示器
@@ -191,7 +191,10 @@ title: 辉光算卦
     - 接头：宝塔头、快接头
   - 了解分体水冷混用铜铝材料部件会引起电化学腐蚀现象
   - 了解分体水冷维护所需步骤：排水、清洁、加水、灭菌
-  - 曾组装过分体式水冷
+  - 了解相变制冷/零下散热系统的组成和原理
+  - 了解液氮制冷所需工具
+  - 了解零下制冷/极限超频所需的准备工作：主板防冷凝、处理器加热启动等
+  - 曾组装过分体式水冷丨是极限超频玩家
 - 电源丨Power Supply/PSU
   - 曾挑选比较过台式机电源
   - 了解评价电源的标准：
@@ -276,6 +279,7 @@ title: 辉光算卦
     - 键盘：手感、布局、键帽做工、机内组件对键盘表面温度的影响、腕托部分对键盘使用体验的影响
     - 触控板：尺寸、手感、表面材质、感应精度、感应灵敏度、防误触和死区设置、按压手感
     - 性能：CPU单烤功耗、GPU单烤功耗、CPU/GPU双烤功耗和功率分配；游戏、重载生产场景实际功耗和功率分配；散热能力测试（监测过热降频、监测加速频率稳定性）
+    - 了解移动处理器/显卡混乱的命名规则，了解命名规则与性能无必然联系，了解如何在型号名之外正确识别实际技术代数和性能能力
     - 对比其他厂商的同种配置方案的性能与价格、整体体验；可维修度、用户可升级/维护性
   - 了解如何评价准系统：
   在笔记本的评价内容外，额外要关注的方面
@@ -322,6 +326,11 @@ title: 辉光算卦
 - 曾挑选比较过各类游戏主机、游戏掌机
 - 了解游戏主机的核心结构，了解游戏主机与普通电脑的异同
 - 了解与PS和Xbox有关的AMD处理器、架构和技术
+- 了解手柄的主要技术
+  - 连接方式：有线、蓝牙无线、2.4GHz无线
+  - 按键技术：薄膜/静电容、弹片、微动
+  - 摇杆技术：电阻式（电位器、碳膜电阻）、磁感应式（霍尔效应/磁电压式、隧穿磁阻/磁电阻式）、光学式
+- 了解手柄摇杆漂移所表现的现象和背后成因：机械（回中力不足/不稳、移动机构阻力过大）、电子（电阻式摇杆阻值偏移）
 - 了解各家主机的代表独占作品
 - 了解主机破解、主机模拟的各类相关概念：越狱、ROM、Homebrew、模拟器
 - 了解游戏模拟的方法，尤其是基于ASIC和Linux开发板的模拟器方式
@@ -331,7 +340,7 @@ title: 辉光算卦
 - 是主机游戏开发者
 - 是硬核复古游戏爱好者/游戏模拟器爱好者
 
-### 摄影摄像
+### 摄影摄像丨Photograhy/Videography/Cinematography
 
 - 照相机丨Still Camera
   - 曾挑选比较过照相机
@@ -351,8 +360,12 @@ title: 辉光算卦
   了解不同格式的压缩方式，了解无损和有损压缩的区别
   - 了解单反和无反的区别，了解有无反光镜对照相机拍摄性能的影响
   - 了解照片后期
+  - 了解图像处理、压缩、变换、效果/滤镜的数学方法
+  - 了解35mm等效焦距/视角的概念
+  - 了解工业/监控摄像头、传感器与镜头，及其和普通相机的异同
   - 是摄影师/影视工作者
-  - 参与过镜头设计与制造丨参与过图像传感器设计与制造
+  - 参与过镜头设计与制造丨参与过图像传感器设计与制造丨是计算摄影学专业
+  - 折腾过开发板与摄像头模块
 - （电影）摄像机丨（Cinema）Video Camera
   - 曾挑选比较过摄像机/视频机
   - 了解摄像机传感器尺寸的衡量方式：胶片尺寸等效（70mm/IMAX、35mm/Super 35、16mm/Super 16、8mm/Super 8）；光电管直径等效（1/x英寸）
@@ -362,27 +375,29 @@ title: 辉光算卦
   - 了解摄像机行业厂商：索尼、阿莱、RED/尼康、Blackmagic Design、松下等
   - 了解常见的视频编码：
     - 有损压缩：H.264（AVC）、H.265（HEVC）、AV1、VP9
-    - 苹果开发的专业处理格式：ProRes/ProRes RAW
-    - 各家的RAW格式视频：REDCODE RAW（RED/尼康）、ARRIRAW（阿莱）、BRAW（Blackmagic）
+    - Apple ProRes/ProRes RAW
+    - RAW格式视频：REDCODE RAW（RED/尼康）、ARRIRAW（阿莱）、BRAW（Blackmagic）
   - 了解HDR视频和Log曲线的相关概念
-  - 了解FFmpeg等工具
+  - 了解FFmpeg等工具，了解视频压缩的重要概念（帧内、帧间、I/B/P帧，关键帧）
   - 了解视频剪辑/非线性剪辑（NLE）软件
   - 是摄像师/影视工作者
   - 参与过商业制作
-- 虚拟现实与虚拟制作丨Virtual Reality, Virtual Production
-  - 曾挑选比较过VR头显或相关设备
-  - 了解VR/AR/XR相关技术，了解如何评价头戴显示器：
-    - 光机：微型屏幕面板类型、分辨率、刷新率、色域色准、亮度、对比度；透镜方案（菲涅尔、Pancake）、透镜光学质量（色差、球差、反光、光晕等）；视角、最佳观看位置/眼盒大小
-    - 硬件性能：（一体机）内置设备性能（通常可参照手机）、功耗/能效；电池容量和续航
-    - 追踪：内向外、外向内/基站式；追踪回报频率/头显位置更新频率、位置追踪精度（追踪算法在硬件上的运行速度、IMU/加速度计等传感器的精度）、漂移纠正；手柄追踪频率、手柄追踪精度、漂移纠正；
-    - 现实透视功能：外置摄像头彩色/黑白、双目立体效果、画面质量、处理和显示延迟
-    - 音频方案/内置扬声器音质
-    - 使用体验：佩戴体验（尺寸、重量、重量分布）、晕动症（低刷新率、低追踪频率、漂移纠正差等）
-  - 了解VR周边配件和各种配件追踪技术
-  - 了解无线VR的实现方案及其依赖的技术
-  - 了解虚拟制作的概念，了解绿幕抠像（软件方案和硬件方案）、虚拟拍摄（追踪相机位置）、动作捕捉（追踪人体关键点）等常用技术
-  - 是VR玩家丨是虚拟主播丨是虚拟制作从业者
-  - 曾自己制作过VR追踪点
+
+### 虚拟现实与虚拟制作丨Virtual Reality, Virtual Production
+  
+- 曾挑选比较过VR头显或相关设备
+- 了解VR/AR/XR相关技术，了解如何评价头戴显示器：
+  - 光机：微型屏幕面板类型、分辨率、刷新率、色域色准、亮度、对比度；透镜方案（菲涅尔、Pancake）、透镜光学质量（色差、球差、反光、光晕等）；视角、最佳观看位置/眼盒大小
+  - 硬件性能：（一体机）内置设备性能（通常可参照手机）、功耗/能效；电池容量和续航
+  - 追踪：内向外、外向内/基站式；追踪回报频率/头显位置更新频率、位置追踪精度（追踪算法在硬件上的运行速度、IMU/加速度计等传感器的精度）、漂移纠正；手柄追踪频率、手柄追踪精度、漂移纠正；
+  - 现实透视功能：外置摄像头彩色/黑白、双目立体效果、画面质量、处理和显示延迟
+  - 音频方案/内置扬声器音质
+  - 使用体验：佩戴体验（尺寸、重量、重量分布）、晕动症（低刷新率、低追踪频率、漂移纠正差等）
+- 了解VR周边配件和各种配件追踪技术
+- 了解无线VR的实现方案及其依赖的技术
+- 了解虚拟制作的概念，了解绿幕抠像（软件方案和硬件方案）、虚拟拍摄（追踪相机位置）、动作捕捉（追踪人体关键点）等常用技术
+- 是VR玩家丨是虚拟主播丨是虚拟制作从业者
+- 曾自己制作过VR追踪点
 
 ### 无人机丨Drone
   
@@ -392,8 +407,69 @@ title: 辉光算卦
 - 了解无人机的构造、控制方案和操作
 - 曾自己组装过无人机丨是航空航天专业
 
-### 手工艺、机械加工
+### 手工艺、机械加工丨Hand Craft, Machine
 
-### 网络
+- 金工/木工丨Metal/Wood Work
+  - 了解各类手动工具
+    - 钳、夹
+    - 刀、挫、锯、钻、刨、磨、锤
+    - 尺、规、冲
+    - 弯管器、折板器
+  - 了解手动加工的各类方法
+  - 了解各类电动工具：电钻、冲击扳手、电焊枪
+  - 了解各类加工机床及加工方式：
+    - 车、铣、磨、钻、镗
+    - 水切割、线切割、等离子切割、激光切割
+    - 雕刻机、加工中心
+    - 冲压、冲切
+  - 了解金属的传统加工工艺：铸、锻、轧、拉
+  - 了解铝合金型材的制造方式和标准形制
+  - 了解塑料的成型技术：挤塑、注塑、压塑
+  - 是手工达人丨是技术工人丨自家有工坊
+- 3D打印/增材制造丨3D Printing/Additive Manufacture
+  - 了解基于塑料的常见3D打印工艺
+    - 热塑：线材熔融挤出（FFF/FDM）、颗粒熔融挤出（注塑、工业打印）
+    - 光敏：紫外线投射（SLA/DLP）、紫外线遮蔽（LCD）
+    - 粉末烧结：选择性激光烧结（SLS）、（惠普）多喷头熔融（Multi Jet Fusion）
+  - 了解各类3D打印方式的优劣、成品强度、后加工工艺等
+  - 了解金属3D打印的原理：熔融沉积、粉末烧结
+  - 了解主流模型设计软件和方法：Autodesk Fusion、Dassualt Systemes SOLIDWORKS
+  - 了解常见3D模型文件格式：3mf、stl、obj
+  - 是手工达人丨拥有/使用过3D打印机丨是3D打印农场主
+  - 是机械设计工程师丨是机械设计专业丨通过3D打印制造过机械零件
+  - 是雕塑/艺术/造型设计师丨是手办制作达人
 
-### 服务器/数据中心
+### 网络丨Network
+
+- 了解网络构成，了解常见网络设备
+- 了解OSI模型（七层模型）：物理、链路、网络、传输、会话、表现、应用
+- 了解常见网络传输介质、性能、原理
+- 了解常见网络协议及其应用
+- 是网络工程师
+
+### 服务器/数据中心丨Server, Datacenter
+
+- 虚拟化丨Virtualization
+  - 了解虚拟机、宿主机、虚拟机监视器的概念
+  - 了解虚拟化采用的技术，了解虚拟化的目的和意义：兼容、隔离、分割
+  - 了解虚拟机硬件透传的作用和局限
+  - 了解虚拟机的局限和安全问题（虚拟机逃逸）
+  - 搭建过虚拟机丨是虚拟主机/轻量服务器工程师
+
+- 服务器丨Server
+  - 了解服务器产品，了解常见服务器类型
+  - 了解服务器和个人电脑的异同，了解服务器专属的接口、技术、扩展和硬件（PCIe x32, CXL，夹层卡，IPMI）
+  - 了解服务器的性能特性，了解服务器适合和不适合的软件类型
+  - 了解服务器运行常规软件（游戏）性能欠佳的原因
+    - 运行核心跳跃
+    - 跨核簇/CCX、小芯片/CCD、处理器/NUMA节点的延迟损耗
+    - 主频偏低
+    - 多核优化欠佳/不支持多核处理
+  - 折腾过服务器硬件丨家有机房丨是数据中心工程师
+
+- 数据中心丨Datacenter
+  - 了解数据中心的优势（服务器集群部署的优势）
+  - 了解只有大规模部署才有可能/有意义实现的技术（PCIe over Network/Fabric）
+  - 了解数据中心的成本来源（用地、用水、用电、散热、网络、机架硬件）
+  - 了解数据中心的散热方式（风机/制冷、整机架水冷、换热/散热塔）
+  - 是数据中心工程师
