--- a/_posts/2025-11-13-service.md
+++ b/_posts/2025-11-13-service.md
@@ -4,19 +4,50 @@ title: 辉光服务
 permalink: /d-service
 ---
 
-辉光字幕组自成立来，致力于英文视频翻译，主攻科技数码。我们承接中-英语言对的翻译服务，擅长领域广泛，包括科技数码、消费电子、汽车行业、工业制造、电子游戏、摄影摄像等领域，提供包括视频字幕翻译制作在内的各类文字笔译服务，尤长于提供人工高质量翻译服务。
+辉光字幕组自成立来，致力于英文视频翻译，主攻科技数码。我组承接中-英语言对的翻译服务，擅长领域广泛，包括科技、数码与消费电子、汽车、工业制造、AI与数据中心、电子游戏、摄影摄像等领域，提供包括视频字幕翻译制作在内的各类笔译服务，以人工高质量笔译服务见长。
 
 ## 服务价格
 
-- 视频：标准报价为 USD$*.**/分钟，以客户提供的视频内容时长计，向上取整至半分钟。包括翻译工作、由我方提供的高质量校对和质量保证及时间轴同步工作。如您有部分工作无需我方处理或有其他额外需求，则可联系我方询价。
-- 文字：标准报价为 CNY¥250-300/千字（词），以客户提供的文稿字数计，向上取整至百字。包括翻译工作和我方提供的高质量校对与质量保证。如您有部分工作无需我方处理或有其他额外需求，则可联系我方询价。
-- 如您有意长期合作，我方也可以特定价格和您签订长期合作合同。
+- 视频：标准报价为 USD$ 6.50 (CNY¥ 46.00)/分钟，以客户提供的视频内容时长计，向上取整至半分钟。包括翻译工作，由我方提供的高质量校对和质量保证，及时间轴同步工作。如您有部分工作无需我方处理或有其他额外需求，则可联系我组询价。
+- 文字：标准报价为 CNY¥ 250-300/千字（词），以客户提供的文稿字数计，精确到单字，具体单价视原文类型、难度和长度而定。包括翻译工作和我方提供的高质量校对与质量保证。如您有部分工作无需我方处理或有其他额外需求，则可联系我组询价。
+- 如您有意长期合作，我组也可以特定价格和您签订长期承包合同。
 - 我方依据内容量设置了固定时效，但我方也接受加急委托，加急费率详见下方。
+- 在双方没有提前约定的前提下，我组只接受两次内容或需求更改。  
+  客户提交更改后，我方将根据更改所需工作量和已完成工作量重新评估时效，原先时效不再有约束力。  
+  在我组可接受的两次之外的更改，除重新评估时效外，我组可能会向您收取因需求更改而产生额外工作量的服务费用，及可能的加急费用。  
+  如果您有随时、不断更改需求的可能（如游戏本地化项目），请与我组单独沟通时效和需求更改事宜。
+- 如您在委托完成前取消委托，我组依旧会要求您支付委托费用，金额为委托总价格的：
+  - 40%，或；
+  - 已完成工作量占总工作量的比例。
 
 ## 服务时效
 
-- 视频：包括我方校对、QA和时间轴工作的情况下，30分钟以内内容交稿时效7天，超出部分每10分钟（不足时长向上取整）加1天。
-- 文字：包括我方校对和QA工作的情况下，每2500字/词计一天时效；超过两万字后，每五千字/词计三天时效。
+- 时效计算：从我方收到源语言材料、完成评估、与客户完成需求沟通后的第一个工作日00:00（GMT+8）开始计算。
+- 视频：
+  - 包括我方校对、QA和时间轴工作的情况下，30分钟以内内容交稿时效7天；  
+  超出部分每10分钟（不足时长向上取整）加1天。
+  - 其他工作流需求的时效视具体工作和工作量，由双方单独协定。
+- 文字：
+  - 包括我方校对和QA工作的情况下，每2.5千字/词计1天时效（不足时以2.5千字为单位向上取整）；  
+  超过20千字/词后，每5千字/词计3天时效（不足时以5千字为单位向上取整）。
+  - 其他工作流需求的时效视具体工作和工作量，由双方单独协定。
+- 时效保证：
+  - 时效天数均为工作日，且中国公共节假日的调休工作日不计作工作日。  
+  时效起始日若为周末/节假日，顺延至休息日后的第一个工作日00:00开始计算。  
+  例：
+    - 第一周星期四00:00开始的7天时效委托，交稿时限为第二周周周五23:59前。  
+    - 第一周星期四00:00开始的5天时效委托，但第一周周六调休上班，周天至第二周周二放假，则交稿时限为第二周周五23:59前（而非第二周周四）。  
+    - 第一周周六/周天开始的委托，从第二周周一00:00开始计算时效。  
+    - 第一周周六调休上班，周天至第二周周二放假，在此期间（周六-次周周二）收到的委托从第二周周三00:00开始计算时效。
+  - 开始计算时效后，在工作、材料和需求不改变的前提下，我组承诺绝对保证时效。
+  由我组任何原因导致的超期：
+    - 超时不足24小时，服务费以70%计；
+    - 超时24-48小时，服务费以50%计；
+    - 超时48-72小时，服务费30%计；
+    - 超时超过72小时，免收服务费。
+
+## 加急费用
+
 - 视频加急：
   - 20分钟内视频加急至24小时、20-40分钟至60小时、40-60分钟至100小时，加急费计75%；
   - 20分钟内视频加急至3天、20-40分钟至5天、40-60分钟至7天，加急费计40%；
@@ -30,10 +61,26 @@ permalink: /d-service
 
 ## 质量保证
 
-**placeholder - Define Translation Error and Punishment**
-Refrence Needed
+- 客户在收到译文后，有权自行检查和校对。在确认存在问题后，客户应尽早向我组提出异议。
+- 在双方认可译文存在差错的情况下，客户有权责令我组限期返工改正，我组不会收取额外费用。  
+在有充足理由的前提下，我组保留向客户解释异议处不应视为译文差错的权利。
+- 若我组提交的译文出现大量差错，或因改正译文差错导致委托超时，客户有权按照译文差错率扣除应付我组的翻译服务费用，并按可能出现的超时时长，顺延推迟付款且无需负担违约金。
+- 译文差错率按照中华人民共和国国家标准`GB/T 19682——2005 翻译服务译文质量要求` 附录A `A.1 译文差错率计算公式`计算，抵扣翻译服务费用时设上限45%。
+
+
+## 权利、义务与权利转交
+
+- 我组首先承诺：**绝对履行翻译职业应当遵守的，对客户及客户提供内容和相关文件等材料的保密义务。**  
+  我组也可与客户另行签订保密协议（NDA）。
+- 权利、义务和权利转交的细则由双方协定，并通过委托合约保证实行。
+
+## 结款方式
+
+- 具体的收款方式，在双方协商时确定。
+- 我组要求客户在委托时效结束（非我组交稿时间）后的15天内将服务费用全款付清。  
+  因客户任何原因导致的付款延期，我组将按0.6%/天（计单利，18%/月）的标准加收滞纳金。
 
 ## 联系方式
 
-**placeholder**
-Later Problem
+无论您是有项目合作事宜，还是想了解我组能力等更多详情，都欢迎您向我们致信！  
+电子邮件：`nixiesubs@gmail.com`
